--- a/ios-developer.html
+++ b/ios-developer.html
@@ -213,7 +213,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -231,7 +231,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vienna</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">San Bruno, California</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -253,7 +253,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -382,7 +382,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Helsinki, Uusimaa, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696835503-internship-mobile-ios-developer'>Netatmo INTERNSHIP -  Mobile iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999696835503-internship-mobile-ios-developer'>Netatmo INTERNSHIP -  Mobile iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -398,7 +398,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... As part of your application, we'd love to hear what you think are some of the best 
 designed apps (in terms of technical design) and why. This is open ended and?...</p>
@@ -421,7 +421,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/414518-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/414518-android-lead-developer-m-f-d-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -459,7 +459,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4457417002'>Job Application for iOS Developer at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4457417002'>Job Application for iOS Developer at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
